# mindshift-cpp-backend

./: .gitignore  CMakeLists.txt  LICENSE  build.sh  run.sh
src/: CMakeLists.txt  main.cpp
src/database/: CMakeLists.txt  database_client.cpp  database_client.h
src/external_apis/: CMakeLists.txt  openai_client.cpp  openai_client.h
src/server/: CMakeLists.txt  auth.cpp  auth.h  http_server.cpp  http_server.h  http_session.cpp  http_session.h  middleware.cpp  middleware.h  request_handler.cpp  request_handler.h  router.cpp  router.h
src/utils/: CMakeLists.txt
